--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body {
     padding: 20px 15px;
     background-color: #1F2937;
     align-items: center;
-    height: 10vh;
+    height: 10%;
 }
 
 .inp-color {
@@ -33,6 +33,7 @@ body {
     padding: 0.125em 1em;
     font-size: 0.75rem;
     cursor: pointer;
+    height: auto;
 }
 
 
@@ -77,6 +78,8 @@ body {
   color: white;;
   padding-left: 4px;
   padding-right: 4px;
+  height: auto;
+  margin-top: 1em;
 }
 
 .custom-option {
@@ -97,8 +100,14 @@ i {
 
 .fa-chevron-down {
   color: white;
-  transform: translate(0, 45%);
+  /* transform: translate(0, 45%); */
   cursor: pointer;
+  
+}
+
+i.fa-solid.fa-chevron-down {
+  display: flex;
+  align-items: center;
 }
 
 #copy {
